Added more unit tests to increase the coverage